Closed Bug 282973 Opened 21 years ago Closed 21 years ago

[FIX]nsIMarkupDocumentViewer has pointless allowPlugins attribute

Categories

(Core :: DOM: Core & HTML, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.8beta2

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

nsIMarkupDocumentViewer has an allowPlugins attribute. This isn't actually used anywhere in our tree, and doesn't do anything. I propose removing it. For people who need the functionality, there is nsIDocShell.allowPlugins and the embedding nsIWebBrowserSetup interface (which is a frozen interface that allows calling into nsIDocShell.allowPlugins for embeddors and anyone else wise enough to use nsWebBrowser). Those work a lot better than the viewer (though not perfectly by any means).
Attached patch Fix — — Splinter Review
Just remove the pointless code.
Attachment #174943 - Flags: superreview?(jst)
Attachment #174943 - Flags: review?(jst)
Priority: -- → P3
Summary: nsIMarkupDocumentViewer has pointless allowPlugins attribute → [FIX]nsIMarkupDocumentViewer has pointless allowPlugins attribute
Target Milestone: --- → mozilla1.8beta2
Comment on attachment 174943 [details] [diff] [review] Fix Oh yeah, that is useless :)
Attachment #174943 - Flags: superreview?(jst)
Attachment #174943 - Flags: superreview+
Attachment #174943 - Flags: review?(jst)
Attachment #174943 - Flags: review+
please update the IID of the interface... embeddors are using it (galeon, at least)
Fixed (and the uuid updated, good catch!).
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: