Remove unused and unimplemented attribute on nsIMarkupDocumentViewer.  Bug 282973, r+sr=jst